fixed input jump2

--- a/src/components/UI/FormInput/FormInput.module.css
+++ b/src/components/UI/FormInput/FormInput.module.css
@@ -19,7 +19,7 @@
     display: block;
     width: 100%;
     box-sizing: border-box;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .InputElement:focus {
